# wordrill

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CREDITS.md  README.md  SECURITY.md  SUPPORT.md  requirements.txt  setup.cfg  wordrill.sh
prog/: info.py  load.py  load_test.py  main.py  word_test.py
wordrill/: info.py  load.py  load_test.py  main.py  word.py  word_test.py
