# Wordrill © 2025 by Peter Lényi is licensed under GNU GPL v3
# License: https://www.gnu.org/licenses/gpl-3.0.html

[metadata]
name = Wordrill
version = 1.0.2
author = Peter Lényi
license = GNU GPL v3
url = https://github.com/peterlenyi/wordrill
description = Practice your foreign language vocabulary.

[tool:pytest]
collect_imported_tests = false
